--- a/first_time.html
+++ b/first_time.html
@@ -25,7 +25,7 @@
     <br><br>
     </div>
     <div id="second_page" class="hidden">
-      <h1><center>We want to know a little bit more about you</center></h1>
+    <center style="font-size:35px;font-weight:bold;color:#0aa046;">WE WANT TO KNOW A LITTLE BIT MORE ABOUT YOU</center>
       <br><br>
       <p>Chose your favorite Team and National Team.</p>
   <p>League:</p>
@@ -93,9 +93,10 @@
         <input type="text" name="firmName">
     </div>
     <div id="third_page" class="hidden">
-      <h1><center>Last step before you start</center></h1>
+      <h1><center style="color:#0aa046;">LAST STEP BEFORE YOU START</center></h1>
       <br>
         <h3>..and enjoy the game!</h3>
+        <img src="Ugsgsgsgtitled-1.jpg">
     </div>
     <button id="previous" class="hidden">PREVIOUS</button>
     <button id="next">NEXT</button>
