--- a/first_time.html
+++ b/first_time.html
@@ -28,13 +28,13 @@
     <center style="font-size:35px;font-weight:bold;color:#0aa046;">WE WANT TO KNOW A LITTLE BIT MORE ABOUT YOU</center>
       <br><br>
       <p>Chose your favorite Team and National Team.</p>
-  <p>League:</p>
+  <p style="font-weight: bold;">League:</p>
     <select id="LeagueList" onchange="check1()">
         <option disabled selected value>Choose Your League</option>
         <option value="BrLeague">Brazilian League</option>
     </select>
     <div id='FavBRTeam' class='hidden'>
-    <p>Your Favorite Team:</p>
+    <p  style="font-weight: bold;">Your Favorite Team:</p>
     <select id="TeamBRList" onchange="check()">
             <option disabled selected value>Choose Your Team</option>
             <option value="AmeMG">América-MG</option>
@@ -63,7 +63,7 @@
     </select>
     </div>
     <div id="escudoTime" style="margin-top:10px;"></div>
-  <p class="pre_load2">Your Favorite National Team:</p>
+  <p class="pre_load2" style="font-weight: bold;">Your Favorite National Team:</p>
     <select id="NtlTeams" onchange="check2()">
             <option disabled selected value>Choose Your National Team</option>
             <option value="Arge">Argentina</option>
