--- a/home.html
+++ b/home.html
@@ -24,22 +24,22 @@
       <li><a href="#">Your Firm</a></li>
       <li><a href="#">Next Games</a></li>
       <li><a href="#">Rankings</a></li>
-     <li><a href="#" id="icons" class="icons"><img src="css/imgs/settings.png" onmouseover="this.src='css/imgs/settingsGreen.png'" onmouseout="this.src='css/imgs/settings.png'"></a></li>
-      <li><a href="#" id="icons" class="icons"><img src="css/imgs/suitcase.png" onmouseover="this.src='css/imgs/suitcaseGreen.png'" onmouseout="this.src='css/imgs/suitcase.png'"></a></li>
-      <li><a href="#" id="icons" class="icons"><img src="css/imgs/sun-eclipse.png" onmouseover="this.src='css/imgs/sun-eclipseGreen.png'" onmouseout="this.src='css/imgs/sun-eclipse.png'"></a></li>
+      <li><a href="#" class="icons" class="icons"><img src="css/imgs/settings.png" onmouseover="this.src='css/imgs/settingsGreen.png'" onmouseout="this.src='css/imgs/settings.png'"></a></li>
+      <li><a href="#" class="icons" class="icons"><img src="css/imgs/suitcase.png" onmouseover="this.src='css/imgs/suitcaseGreen.png'" onmouseout="this.src='css/imgs/suitcase.png'"></a></li>
+      <li><a href="#" class="icons" class="icons"><img src="css/imgs/sun-eclipse.png" onmouseover="this.src='css/imgs/sun-eclipseGreen.png'" onmouseout="this.src='css/imgs/sun-eclipse.png'"></a></li>
     </ul>
 
     <div class="ter">
-      <div style="background-color:red; width:50%; height:50%; float:left">
+      <div style="background-color:#dfe3e0; width:50%; height:50%; float:left">
 </div>
 
-<div style="background-color:blue; width:50%; height:50%; float:right">
+<div style="background-color:#b7c3ba; width:50%; height:50%; float:right">
 </div>
 
-<div style="background-color:green; width:50%; height:50%; float:left">
+<div style="background-color:#b7c3ba; width:50%; height:50%; float:left">
 </div>
 
-<div style="background-color:orange; width:50%; height:50%; float:right">
+<div style="background-color:#dfe3e0; width:50%; height:50%; float:right">
 </div>
       
     </div>
