--- a/home.html
+++ b/home.html
@@ -210,7 +210,7 @@
             }
         };
 
-        $.each(config.data.datasets, function(i, dataset) {
+        $.each(config1.data.datasets, function(i, dataset) {
             dataset.borderColor = randomColor(0.4);
             dataset.backgroundColor = randomColor(0.5);
             dataset.pointBorderColor = randomColor(0.7);
