--- a/home.html
+++ b/home.html
@@ -37,6 +37,11 @@
 
 <div style="background-color:#b7c3ba; width:50%; height:50%; float:right">
  <center><h1>Last Games</h1></center>
+ <br>
+ <center><h3 style="color: black;">Flamengo 2 x 2 Corinthias</h3></center>
+ <center><h3 style="color: black;">China 1 x 3 Japan</h3></center>
+ <center><h3 style="color: black;">Palmeiras 1 x 0 Santa Cruz</h3></center>
+ <center><h3 style="color: black;">Flamengo 5 x 4 Santos</h3></center>
 
 </div>
 
@@ -59,11 +64,6 @@
 
       // Tooltip Element
       var tooltipEl = $('#chartjs-tooltip');
-
-      if (!tooltipEl[0]) {
-        $('body').append('<div id="chartjs-tooltip"></div>');
-        tooltipEl = $('#chartjs-tooltip');
-      }
 
       // Hide if no tooltip
       if (!tooltip.opacity) {
