--- a/home.html
+++ b/home.html
@@ -53,7 +53,11 @@
 </div>
 
 <div style="background-color:#dfe3e0; width:50%; height:50%; float:right">
-<center><h1>Ranking</h1></center>
+<center><h1>Today's Top Stock Variations</h1></center>
+&nbsp;&nbsp;&nbsp;&nbsp;<img src="css/imgs/UpGreen.png" style="margin-bottom:-2px;width: 6%;">&nbsp;&nbsp;<h2 style="display:inline-block;">(12%)Flamengo</h2><br>
+&nbsp;&nbsp;&nbsp;&nbsp;<img src="css/imgs/UpGreen.png" style="margin-bottom:-2px;width: 6%;">&nbsp;&nbsp;<h2 style="display:inline-block;">(6%)Santos</h2><br>
+&nbsp;&nbsp;&nbsp;&nbsp;<img src="css/imgs/UpGreen.png" style="margin-bottom:-2px;width: 6%;">&nbsp;&nbsp;<h2 style="display:inline-block;">(0.2%)China</h2><br>
+&nbsp;&nbsp;&nbsp;&nbsp;<img src="css/imgs/DownRed.png" style="margin-bottom:-2px;width: 6%;">&nbsp;&nbsp;<h2 style="display:inline-block;color:#dd5056;">(6%)Palmeiras</h2><br>
 </div>
       
     </div>
