--- a/first_time.html
+++ b/first_time.html
@@ -19,7 +19,7 @@
 <div id="first_page">
    <center id="resposta" class="pre_load2"><div></div></center>
    <center><div id="resposta2"></div></center>
-   <div id="WelText">
+   <div id="WelText" style="background-color: #efefef;border-radius:20px;padding:22px;">
 
     <center><h2>Congratulations, now you are part of FUTMARKET, make yourself comfortable.</h2></center>
     <p>We will teach you the basics of this game.</p>
@@ -29,6 +29,7 @@
     <div id="second_page" class="hidden">
     <center style="font-size:35px;font-weight:bold;color:#0aa046;">WE WANT TO KNOW A LITTLE BIT MORE ABOUT YOU</center>
       <br><br>
+      <div style="background-color: #efefef;border-radius:20px;padding:22px;">
       <p>Chose your favorite Team and National Team.</p>
   <p style="font-weight: bold;">League:</p>
     <select id="LeagueList" onchange="check1()">
@@ -92,13 +93,16 @@
         <h3>If you had a firm how should you call it?</h3>
         <input type="text" name="firmName">
     </div>
+    </div>
     <div id="third_page" class="hidden">
       <h1><center style="color:#0aa046;">LAST STEP BEFORE YOU START</center></h1>
       <br>
+      <div style="background-color:#efefef;border-radius:20px;padding:22px;">
         <h3>Confirm Your Data</h3>
         Yor Team:  <div id="escudoTime" style="display:inline-block;vertical-align: middle;">(You did not pick a Team)</div>
         <br><br>
         Your National Team:  <div id="escudoSelecao" style="display:inline-block;vertical-align: middle;">(You did not pick a National Team)</div>
+    </div>
     </div>
     <button id="previous" class="hidden">PREVIOUS</button>
     <button id="next">NEXT</button>
@@ -115,6 +119,7 @@
             getName();
             getName2();
             check1();
+            check23();
         };
     </script>
 </html>
