--- a/first_time.html
+++ b/first_time.html
@@ -19,7 +19,7 @@
 <div id="first_page">
    <center id="resposta" class="pre_load2"><div></div></center>
    <center><div id="resposta2"></div></center>
-   <div id="WelText" style="background-color: #efefef;border-radius:20px;padding:22px;">
+   <div id="WelText" style="background-color:#efefef;border-radius:20px;padding:22px;width:550px;max-width:550px;">
 
     <center><h2>Congratulations, now you are part of FUTMARKET, make yourself comfortable.</h2></center>
     <p>We will teach you the basics of this game.</p>
@@ -29,15 +29,15 @@
     <div id="second_page" class="hidden">
     <center style="font-size:35px;font-weight:bold;color:#0aa046;">WE WANT TO KNOW A LITTLE BIT MORE ABOUT YOU</center>
       <br><br>
-      <div style="background-color: #efefef;border-radius:20px;padding:22px;">
+      <div style="background-color:#efefef;border-radius:20px;padding:22px;width:550px;max-width:550px;">
       <p>Chose your favorite Team and National Team.</p>
-  <p style="font-weight: bold;">League:</p>
+  <p style="font-weight:bold;">League:</p>
     <select id="LeagueList" onchange="check1()">
         <option disabled selected value>Choose Your League</option>
         <option value="BrLeague">Brazilian League</option>
     </select>
     <div id='FavBRTeam' class='hidden'>
-    <p  style="font-weight: bold;">Your Favorite Team:</p>
+    <p  style="font-weight:bold;">Your Favorite Team:</p>
     <select id="TeamBRList" onchange="check()">
             <option disabled selected value>Choose Your Team</option>
             <option value="AmeMG">América-MG</option>
@@ -97,9 +97,9 @@
     <div id="third_page" class="hidden">
       <h1><center style="color:#0aa046;">LAST STEP BEFORE YOU START</center></h1>
       <br>
-      <div style="background-color:#efefef;border-radius:20px;padding:22px;">
+      <div style="background-color:#efefef;border-radius:20px;padding:22px;width:550px;max-width:550px;">
         <h3>Confirm Your Data</h3>
-        Yor Team:  <div id="escudoTime" style="display:inline-block;vertical-align: middle;">(You did not pick a Team)</div>
+        Your Team:  <div id="escudoTime" style="display:inline-block;vertical-align: middle;">(You did not pick a Team)</div>
         <br><br>
         Your National Team:  <div id="escudoSelecao" style="display:inline-block;vertical-align: middle;">(You did not pick a National Team)</div>
     </div>
