--- a/first_time.html
+++ b/first_time.html
@@ -26,7 +26,7 @@
     <p>FUTMARKET is a fantasy market game based on soccer. It work the same way as a normal stock market, but instead of buying real company's stocks, you are going to buy some soccer team stocks. Create your own portfolio, buying and selling stocks of a National Team or some real soccer team. Join up with friends, creating firms, where you can manage hedge funds, putting together money from all of you. Start now!</p></div>
     <br><br>
     </div>
-    <div id="second_page" class="hidden">
+    <div id="second_page" class="hidden" style="width:590px;max-width:590px;">
     <center style="font-size:35px;font-weight:bold;color:#0aa046;">WE WANT TO KNOW A LITTLE BIT MORE ABOUT YOU</center>
       <br><br>
       <div style="background-color:#efefef;border-radius:20px;padding:22px;width:550px;max-width:550px;">
@@ -94,7 +94,7 @@
         <input type="text" name="firmName">
     </div>
     </div>
-    <div id="third_page" class="hidden">
+    <div id="third_page" class="hidden" style="width:590px;max-width:590px;">
       <h1><center style="color:#0aa046;">LAST STEP BEFORE YOU START</center></h1>
       <br>
       <div style="background-color:#efefef;border-radius:20px;padding:22px;width:550px;max-width:550px;">
