--- a/first_time.html
+++ b/first_time.html
@@ -19,17 +19,17 @@
 <div id="first_page">
    <center id="resposta" class="pre_load2"><div></div></center>
    <center><div id="resposta2"></div></center>
-   <div id="WelText" style="background-color:#efefef;border-radius:20px;padding:22px;width:550px;max-width:550px;">
+   <div id="WelText" style="background-color:#efefef;border-radius:20px;padding:22px;">
 
     <center><h2>Congratulations, now you are part of FUTMARKET, make yourself comfortable.</h2></center>
     <p>We will teach you the basics of this game.</p>
     <p>FUTMARKET is a fantasy market game based on soccer. It work the same way as a normal stock market, but instead of buying real company's stocks, you are going to buy some soccer team stocks. Create your own portfolio, buying and selling stocks of a National Team or some real soccer team. Join up with friends, creating firms, where you can manage hedge funds, putting together money from all of you. Start now!</p></div>
     <br><br>
     </div>
-    <div id="second_page" class="hidden" style="width:590px;max-width:590px;">
+    <div id="second_page" class="hidden">
     <center style="font-size:35px;font-weight:bold;color:#0aa046;">WE WANT TO KNOW A LITTLE BIT MORE ABOUT YOU</center>
       <br><br>
-      <div style="background-color:#efefef;border-radius:20px;padding:22px;width:550px;max-width:550px;">
+      <div style="background-color:#efefef;border-radius:20px;padding:22px;">
       <p>Chose your favorite Team and National Team.</p>
   <p style="font-weight:bold;">League:</p>
     <select id="LeagueList" onchange="check1()">
@@ -94,10 +94,10 @@
         <input type="text" name="firmName">
     </div>
     </div>
-    <div id="third_page" class="hidden" style="width:590px;max-width:590px;">
+    <div id="third_page" class="hidden">
       <h1><center style="color:#0aa046;">LAST STEP BEFORE YOU START</center></h1>
       <br>
-      <div style="background-color:#efefef;border-radius:20px;padding:22px;width:550px;max-width:550px;">
+      <div style="background-color:#efefef;border-radius:20px;padding:22px;">
         <h3>Confirm Your Data</h3>
         Your Team:  <div id="escudoTime" style="display:inline-block;vertical-align: middle;">(You did not pick a Team)</div>
         <br><br>
