--- a/first_time.html
+++ b/first_time.html
@@ -120,6 +120,7 @@
             getName2();
             check1();
             check23();
+            $(document).scrollTop( $("#start").offset().top );  
         };
     </script>
 </html>
