--- a/first_time.html
+++ b/first_time.html
@@ -21,9 +21,9 @@
    <center><div id="resposta2"></div></center>
    <div id="WelText" style="background-color:#efefef;border-radius:20px;padding:22px;">
 
-    <center><h2>Congratulations, now you are part of FUTMARKET, make yourself comfortable.</h2></center>
-    <p>We will teach you the basics of this game.</p>
-    <p>FUTMARKET is a fantasy market game based on soccer. It work the same way as a normal stock market, but instead of buying real company's stocks, you are going to buy some soccer team stocks. Create your own portfolio, buying and selling stocks of a National Team or some real soccer team. Join up with friends, creating firms, where you can manage hedge funds, putting together money from all of you. Start now!</p></div>
+    <center><h2>Congratulations, your life as a stockbroker has just begun.</h2></center>
+    <p>Before you start, we will teach you the basics of the game.</p>
+    <p>Different from the traditional stock market, which is based on the purchase and sale of companies’ shares, FUTMARKET provides you a unique experience by creating a fantasy market game based on soccer. So basically the game works just like a normal stock market, but instead of buying and selling companies stocks, you will purchase soccer teams’ stocks. Furthermore, you will be able to track the growth of all teams you have invested, join up with friends and create your own stock firm where you can manage hedge funds, you will have access to schedule and results of the teams’ games and much more. Be part of this World!</p></div>
     <br><br>
     </div>
     <div id="second_page" class="hidden">
