--- a/home.html
+++ b/home.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <script src='js/jquery-3.1.1.min.js'></script>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/home.css">
   <script src="js/fbSDK.js"></script>
+  <script src="js/home.js"></script>
   <script src="Chart.js-2.3.0/dist/Chart.bundle.js"></script>
-  <script src='js/jquery-3.1.1.min.js'></script>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -54,11 +55,9 @@
 
 <div style="background-color:#dfe3e0; width:50%; height:50%; float:right">
 <center><h1>Today's Top Stock Variations</h1></center>
-&nbsp;&nbsp;&nbsp;&nbsp;<img src="css/imgs/UpGreen.png" style="margin-bottom:-2px;width: 6%;">&nbsp;&nbsp;<h2 style="display:inline-block;">(12%)Flamengo</h2><br>
-&nbsp;&nbsp;&nbsp;&nbsp;<img src="css/imgs/UpGreen.png" style="margin-bottom:-2px;width: 6%;">&nbsp;&nbsp;<h2 style="display:inline-block;">(6%)Santos</h2><br>
-&nbsp;&nbsp;&nbsp;&nbsp;<img src="css/imgs/UpGreen.png" style="margin-bottom:-2px;width: 6%;">&nbsp;&nbsp;<h2 style="display:inline-block;">(0.2%)China</h2><br>
-&nbsp;&nbsp;&nbsp;&nbsp;<img src="css/imgs/DownRed.png" style="margin-bottom:-2px;width: 6%;">&nbsp;&nbsp;<h2 style="display:inline-block;color:#dd5056;">(6%)Palmeiras</h2><br>
-</div>
+<div id="firstChange"></div>
+<div id="secondChange"></div>
+<div id="thirdChange"></div>
       
     </div>
 
