--- a/home.html
+++ b/home.html
@@ -58,6 +58,8 @@
 <div id="firstChange"></div>
 <div id="secondChange"></div>
 <div id="thirdChange"></div>
+<div id="fourthChange"></div>
+<div id="fifthChange"></div>
       
     </div>
 
