--- a/home.html
+++ b/home.html
@@ -55,12 +55,13 @@
 
 <div style="background-color:#dfe3e0; width:50%; height:50%; float:right">
 <center><h1>Today's Top Stock Variations</h1></center>
-<div id="firstChange"></div>
-<div id="secondChange"></div>
-<div id="thirdChange"></div>
-<div id="fourthChange"></div>
-<div id="fifthChange"></div>
-      
+<ul id="changeslist">
+<li class="changeslist"><div id="firstChange"></div></li>
+<li class="changeslist"><div id="secondChange"></div></li>
+<li class="changeslist"><div id="thirdChange"></div></li>
+<li class="changeslist"><div id="fourthChange"></div></li>
+<li class="changeslist"><div id="fifthChange"></div></li>
+</ul>
     </div>
 
 </body>
