--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
     </div>
 </div>
 
-<div style="background-color:#dfe3e0; width:50%; height:50%; float:right">
+<div style="background-color:#dfe3e0; width:50%; height:50%;float:right;overflow:hidden;overflow-y:scroll;">
 <center><h1>Today's Top Stock Variations</h1></center>
 <ul id="changeslist">
 <li class="changeslist"><div id="firstChange"></div></li>
