--- a/home.html
+++ b/home.html
@@ -54,11 +54,16 @@
 <div style="background-color:#dfe3e0; width:50%; height:50%;float:right;overflow:hidden;overflow-y:scroll;">
 <center><h1>Today's Top Stock Variations</h1></center>
 <ul id="changeslist">
-<li class="changeslist"><div id="firstChange"></div></li>
-<li class="changeslist"><div id="secondChange"></div></li>
-<li class="changeslist"><div id="thirdChange"></div></li>
-<li class="changeslist"><div id="fourthChange"></div></li>
-<li class="changeslist"><div id="fifthChange"></div></li>
+<li class="changeslist"><div id="changediv0"></div></li>
+<li class="changeslist"><div id="changediv1"></div></li>
+<li class="changeslist"><div id="changediv2"></div></li>
+<li class="changeslist"><div id="changediv3"></div></li>
+<li class="changeslist"><div id="changediv4"></div></li>
+<li class="changeslist"><div id="changediv5"></div></li>
+<li class="changeslist"><div id="changediv6"></div></li>
+<li class="changeslist"><div id="changediv7"></div></li>
+<li class="changeslist"><div id="changediv8"></div></li>
+<li class="changeslist"><div id="changediv9"></div></li>
 </ul>
     </div>
 
