--- a/home.html
+++ b/home.html
@@ -64,6 +64,26 @@
 <li class="changeslist"><div id="changediv7"></div></li>
 <li class="changeslist"><div id="changediv8"></div></li>
 <li class="changeslist"><div id="changediv9"></div></li>
+<li class="changeslist"><div id="changediv10"></div></li>
+<li class="changeslist"><div id="changediv11"></div></li>
+<li class="changeslist"><div id="changediv12"></div></li>
+<li class="changeslist"><div id="changediv13"></div></li>
+<li class="changeslist"><div id="changediv14"></div></li>
+<li class="changeslist"><div id="changediv15"></div></li>
+<li class="changeslist"><div id="changediv16"></div></li>
+<li class="changeslist"><div id="changediv17"></div></li>
+<li class="changeslist"><div id="changediv18"></div></li>
+<li class="changeslist"><div id="changediv19"></div></li>
+<li class="changeslist"><div id="changediv20"></div></li>
+<li class="changeslist"><div id="changediv21"></div></li>
+<li class="changeslist"><div id="changediv22"></div></li>
+<li class="changeslist"><div id="changediv23"></div></li>
+<li class="changeslist"><div id="changediv24"></div></li>
+<li class="changeslist"><div id="changediv25"></div></li>
+<li class="changeslist"><div id="changediv26"></div></li>
+<li class="changeslist"><div id="changediv27"></div></li>
+<li class="changeslist"><div id="changediv28"></div></li>
+<li class="changeslist"><div id="changediv29"></div></li>
 </ul>
     </div>
 
