--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <ul class="tab-group">
         <li class="tab active"><a href="#signup">Sing Up</a></li>
-        <li class="tab"><a href="#login1">Loign</a></li>
+        <li class="tab"><a href="#login1">Login</a></li>
       </ul>
 
       <div class="tab-content">
