--- a/home.html
+++ b/home.html
@@ -84,6 +84,20 @@
 <li class="changeslist"><div id="changediv27"></div></li>
 <li class="changeslist"><div id="changediv28"></div></li>
 <li class="changeslist"><div id="changediv29"></div></li>
+<li class="changeslist"><div id="changediv30"></div></li>
+<li class="changeslist"><div id="changediv31"></div></li>
+<li class="changeslist"><div id="changediv32"></div></li>
+<li class="changeslist"><div id="changediv33"></div></li>
+<li class="changeslist"><div id="changediv34"></div></li>
+<li class="changeslist"><div id="changediv35"></div></li>
+<li class="changeslist"><div id="changediv36"></div></li>
+<li class="changeslist"><div id="changediv37"></div></li>
+<li class="changeslist"><div id="changediv38"></div></li>
+<li class="changeslist"><div id="changediv39"></div></li>
+<li class="changeslist"><div id="changediv40"></div></li>
+<li class="changeslist"><div id="changediv41"></div></li>
+<li class="changeslist"><div id="changediv42"></div></li>
+<li class="changeslist"><div id="changediv43"></div></li>
 </ul>
     </div>
 
