--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/home.css">
   <script src="js/fbSDK.js"></script>
+  <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -53,6 +54,7 @@
 
 <div style="background-color:#dfe3e0; width:50%; height:50%;float:right;overflow:hidden;overflow-y:scroll;">
 <center><h1>Today's Top Stock Variations</h1></center>
+<button id="SortssButton" onclick="Sortsssf();">&nbsp;Sort&nbsp;</button>
 <ul id="changeslist">
 <li class="changeslist"><div id="changediv0"></div></li>
 <li class="changeslist"><div id="changediv1"></div></li>
