--- a/index.html
+++ b/index.html
@@ -264,7 +264,8 @@
         </div>
 
       </div>
-
+  <br>
+  <strong><center><h2>OR</h2></center></strong>
   <br>
   <strong><center><button onclick="login()" id="login" class="btnn">LOGIN WITH FACEBOOK</button></center></strong>
   <center><div id="status"></div></center>
