--- a/home.html
+++ b/home.html
@@ -56,29 +56,71 @@
 
 <div style="background-color:#dfe3e0; width:50%; height:50%;float:right;overflow:hidden;overflow-y:scroll;">
 <center><h1>Today's Top 20 Stock Changes</h1></center>
-<button id="SortssButton">&nbsp;Sort&nbsp;</button>
-<ul id="changeslist">
-<li class="changeslist"><div id="changediv0"></div></li>
-<li class="changeslist"><div id="changediv1"></div></li>
-<li class="changeslist"><div id="changediv2"></div></li>
-<li class="changeslist"><div id="changediv3"></div></li>
-<li class="changeslist"><div id="changediv4"></div></li>
-<li class="changeslist"><div id="changediv5"></div></li>
-<li class="changeslist"><div id="changediv6"></div></li>
-<li class="changeslist"><div id="changediv7"></div></li>
-<li class="changeslist"><div id="changediv8"></div></li>
-<li class="changeslist"><div id="changediv9"></div></li>
-<li class="changeslist"><div id="changediv10"></div></li>
-<li class="changeslist"><div id="changediv11"></div></li>
-<li class="changeslist"><div id="changediv12"></div></li>
-<li class="changeslist"><div id="changediv13"></div></li>
-<li class="changeslist"><div id="changediv14"></div></li>
-<li class="changeslist"><div id="changediv15"></div></li>
-<li class="changeslist"><div id="changediv16"></div></li>
-<li class="changeslist"><div id="changediv17"></div></li>
-<li class="changeslist"><div id="changediv18"></div></li>
-<li class="changeslist"><div id="changediv19"></div></li>
-</ul>
+<table>
+  <tr>
+    <th style="font-size: 28px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#%&nbsp;&nbsp;CHANGE</th>
+  </tr>
+  <tr>
+    <td><div id="changediv0"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv1"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv2"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv3"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv4"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv5"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv6"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv7"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv8"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv9"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv10"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv11"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv12"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv13"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv14"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv15"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv16"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv17"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv18"></div></td>
+  </tr>
+  <tr>
+    <td><div id="changediv19"></div></td>
+  </tr>
+</table>
     </div>
 
 </body>
