--- a/first_time.html
+++ b/first_time.html
@@ -20,9 +20,9 @@
    <center><div id="resposta2"></div></center>
     </div>
     <div id="second_page" class="hidden">
-    <center style="font-size:35px;font-weight:bold;color:#0aa046;">WE WANT TO KNOW A LITTLE BIT MORE ABOUT YOU</center>
+    <center style="font-size:35px;font-weight:bold;color:#3dd379;">WE WANT TO KNOW A LITTLE BIT MORE ABOUT YOU</center>
       <br><br>
-      <div style="background-color:#efefef;border-radius:20px;padding:22px;">
+      <div style="border-radius:20px;padding:22px;color: white;">
       <p>Chose your favorite Team and National Team.</p>
   <p style="font-weight:bold;">League:</p>
     <select id="LeagueList" onchange="check1()">
@@ -88,9 +88,9 @@
     </div>
     </div>
     <div id="third_page" class="hidden">
-      <h1><center style="color:#0aa046;">LAST STEP BEFORE YOU START</center></h1>
+      <h1><center style="color:#3dd379;">LAST STEP BEFORE YOU START</center></h1>
       <br>
-      <div style="background-color:#efefef;border-radius:20px;padding:22px;">
+      <div style="border-radius:20px;padding:22px;color: white;">
         <h3>Confirm Your Data</h3>
         Your Team:  <div id="escudoTime" style="display:inline-block;vertical-align: middle;">(You did not pick a Team)</div>
         <br><br>
