--- a/first_time.html
+++ b/first_time.html
@@ -20,7 +20,7 @@
    <center><div id="resposta2"></div></center>
     </div>
     <div id="second_page" class="hidden">
-    <center style="font-size:35px;font-weight:bold;color:#3dd379;">WE WANT TO KNOW A LITTLE BIT MORE ABOUT YOU</center>
+    <center style="font-size:60px;color:#3dd379;margin-top:20px;">We want to know a little bit more about you</center>
       <br><br>
       <div style="border-radius:20px;padding:22px;color: white;">
       <p>Chose your favorite Team and National Team.</p>
@@ -88,7 +88,7 @@
     </div>
     </div>
     <div id="third_page" class="hidden">
-      <h1><center style="color:#3dd379;">LAST STEP BEFORE YOU START</center></h1>
+      <h1><center style="color:#3dd379;font-size: 60px;margin-top:20px;">Last step before you start</center></h1>
       <br>
       <div style="border-radius:20px;padding:22px;color: white;">
         <h3>Confirm Your Data</h3>
