--- a/index.html
+++ b/index.html
@@ -27,7 +27,23 @@
         <div id="signup">
           <h1>Welcome</h1>
 
-
+     <form action="/" method="post">
+          
+          <div class="top-row">
+            <div class="field-wrap">
+              <label>
+                First Name<span class="req">*</span>
+              </label>
+              <input type="text" required autocomplete="off" />
+            </div>
+        
+            <div class="field-wrap">
+              <label>
+                Last Name<span class="req">*</span>
+              </label>
+              <input type="text"required autocomplete="off"/>
+            </div>
+          </div>
 
           <div class="field-wrap">
             <label>
@@ -49,6 +65,7 @@
             </label>
             <input type="password"required autocomplete="off"/>
           </div>
+
  <div class="field-wrap">
      Your Bithdate&nbsp; 
      <select id="DayBirthDate">
@@ -227,10 +244,10 @@
             <label>
               Your e-mail<span class="req">*</span>
             </label>
-            <input type="text"required autocomplete="off"/>
+            <input type="email"required autocomplete="off"/>
           </div>
 
-          <button type="submit" class="button button-block"/>Start</button>
+          <button type="submit" class="button button-block">Sing Up</button>
 
           </form>
 
@@ -243,7 +260,7 @@
 
             <div class="field-wrap">
             <label>
-              Login<span class="req">*</span>
+              Your e-mail<span class="req">*</span>
             </label>
             <input type="email"required autocomplete="off"/>
           </div>
