--- a/home.html
+++ b/home.html
@@ -12,11 +12,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>FUT MARKET</title>
 </head>
-<body class="pre_load1">
-
+<body>
+<div class="pre_load1"></div>
+<div class="pre_load2"></div>
+<div class="pre_load3"></div>
     <ul>
       <li><input id="myInp" type="text" name="search" placeholder="Search.."></li>
-      <li><center id="resposta"  class="pre_load2"></center></li>
+      <li><center id="resposta"></center></li>
       <li><h3><center><a href="#" id="resposta1"></a></center></h3></li>
       <li><a class="active" href="home.html">Home</a></li>
       <li><a href="#">Teams</a></li>
