--- a/home.html
+++ b/home.html
@@ -51,8 +51,8 @@
 
 <div style="background-color:#b7c3ba; width:50%; height:50%; float:left">
 <center><h1>Net Worth</h1></center>
-  <div style="width:100%;">
-        <canvas id="canvasNetWorth"></canvas>
+  <div style="margin:20px;">
+        <canvas id="canvasNetWorth" height="235px" ></canvas>
     </div>
 </div>
 
