--- a/index.html
+++ b/index.html
@@ -282,7 +282,12 @@
 
       </div>
   <br>
-  <strong><center><h2>OR</h2></center></strong>
+  <div style="width: 100%; height: 20px; border-bottom: 1px solid black; text-align: center">
+  <span style="font-size: 32px; background-color: white; padding: 0 10px;">
+    OR <!--Padding is optional-->
+  </span>
+</div>
+  <br>
   <br>
   <strong><center><button onclick="login()" id="login" class="btnn">LOGIN WITH FACEBOOK</button></center></strong>
   <center><div id="status"></div></center>
