--- a/first_time.html
+++ b/first_time.html
@@ -23,6 +23,8 @@
     <center style="font-size:60px;color:#3dd379;margin-top:20px;">We want to know a little bit more about you</center>
       <br><br>
       <div style="border-radius:20px;padding:22px;color: white;">
+      <h3>Create a Username that will name you on FutMarket</h3>
+        <input type="text" name="firmName">
       <p>Chose your favorite Team and National Team.</p>
   <p style="font-weight:bold;">League:</p>
     <select id="LeagueList" onchange="check1()">
@@ -83,8 +85,6 @@
             <option value="USA">United States</option>
             <option value="Urua">Uruguay</option>
     </select>
-        <h3>If you had a firm how should you call it?</h3>
-        <input type="text" name="firmName">
     </div>
     </div>
     <div id="third_page" class="hidden">
