--- a/home.html
+++ b/home.html
@@ -201,18 +201,18 @@
                 data: [ChartData[0], ChartData[1], ChartData[2], ChartData[3], ChartData[4]],
                 backgroundColor: [
                     "#F7464A",
-                    "#46BFBD",
-                    "#FDB45C",
-                    "#949FB1",
-                    "#4D5360",
+                    "#9DEDAB",
+                    "#355DDE",
+                    "#F2E63A",
+                    "#855555",
                 ],
             }],
             labels: [
                 "Flamengo",
                 "Palmeiras",
-                "Santos",
-                "China",
-                "Chapecoense"
+                "Cruzeiro",
+                "Brazil",
+                "Vitória"
             ]
         },
         options: {
@@ -269,7 +269,7 @@
                         },
                         ticks: {
                             suggestedMin: 0,
-                            suggestedMax: 200,
+                            suggestedMax: 100,
                         }
                     }]
                 }
