--- a/home.html
+++ b/home.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <script src='js/jquery-3.1.1.min.js'></script>
+  <link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/home.css">
   <script src="js/fbSDK.js"></script>
@@ -46,6 +48,7 @@
  <center><h3 style="color: black;">China 1 x 3 Japan</h3></center>
  <center><h3 style="color: black;">Palmeiras 1 x 0 Santa Cruz</h3></center>
  <center><h3 style="color: black;">Flamengo 5 x 4 Santos</h3></center>
+ <i class="fa fa-bar-chart" aria-hidden="true"></i>
 
 </div>
 
