--- a/home.html
+++ b/home.html
@@ -15,9 +15,6 @@
     <title>FUT MARKET</title>
 </head>
 <body>
-<div class="pre_load1"></div>
-<div class="pre_load2"></div>
-<div class="pre_load3"></div>
     <ul>
       <li><input id="myInp" type="text" name="search" placeholder="Search.."></li>
       <li><center id="resposta"></center></li>
@@ -28,9 +25,9 @@
       <li><a href="#">Your Firm</a></li>
       <li><a href="#">Next Games</a></li>
       <li><a href="#">Rankings</a></li>
-      <li><a href="#" class="icons" class="icons"><img src="css/imgs/settings.png" onmouseover="this.src='css/imgs/settingsGreen.png'" onmouseout="this.src='css/imgs/settings.png'"></a></li>
-      <li><a href="#" class="icons" class="icons"><img src="css/imgs/suitcase.png" onmouseover="this.src='css/imgs/suitcaseGreen.png'" onmouseout="this.src='css/imgs/suitcase.png'"></a></li>
-      <li><a href="#" class="icons" class="icons"><img src="css/imgs/sun-eclipse.png" onmouseover="this.src='css/imgs/sun-eclipseGreen.png'" onmouseout="this.src='css/imgs/sun-eclipse.png'"></a></li>
+      <li><a href="#" class="icons"><i class="fa fa-cogs fa-2x icons" aria-hidden="true"></i></a></li>
+      <li><a href="#" class="icons"><i class="fa fa-suitcase fa-2x icons" aria-hidden="true"></i></a></li>
+      <li><a href="#" class="icons"><i class="fa fa-moon-o fa-2x icons" aria-hidden="true"></i></a></li>
     </ul>
 
     <div class="ter">
@@ -48,7 +45,6 @@
  <center><h3 style="color: black;">China 1 x 3 Japan</h3></center>
  <center><h3 style="color: black;">Palmeiras 1 x 0 Santa Cruz</h3></center>
  <center><h3 style="color: black;">Flamengo 5 x 4 Santos</h3></center>
- <i class="fa fa-bar-chart" aria-hidden="true"></i>
 
 </div>
 
